<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".MainActivity">

        <ImageView
            android:id="@+id/fondoFigma"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/inicioUItituloPpal"
            android:fontFamily="@font/risque"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/figmatextura420" />

        <TextView
            android:id="@+id/tv_UiTituloppal"
            android:layout_width="271dp"
            android:layout_height="89dp"
            android:layout_marginTop="80dp"
            android:contentDescription="@string/screenUiTituloppal"
            android:fontFamily="@font/risque"
            android:text="@string/inicioUItituloPpal"
            android:textAlignment="center"
            android:textSize="28sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/fondoFigma" />

        <TextView
            android:id="@+id/tv_UiHoraActual"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/noto_sans_regular"
            android:text="@string/inicioUIhoraActual"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_UiTituloppal" />

        <DigitalClock
            android:id="@+id/digitalClock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/noto_sans_bold"
            android:textSize="48sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_UiHoraActual" />

        <TextView
            android:id="@+id/Ui_Horas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/noto_sans_bold"
            android:text="@string/tv_UIhora"
            android:textSize="11sp"
            app:layout_constraintStart_toStartOf="@+id/digitalClock"
            app:layout_constraintTop_toBottomOf="@+id/digitalClock" />

        <TextView
            android:id="@+id/Ui_Minutos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="11dp"
            android:fontFamily="@font/noto_sans_regular"
            android:text="@string/tv_UIminutos"
            android:textSize="11sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.068"
            app:layout_constraintStart_toEndOf="@+id/Ui_Horas"
            app:layout_constraintTop_toBottomOf="@+id/digitalClock" />

        <Button
            android:id="@+id/Ui_verRecordatorio"
            android:layout_width="201dp"
            android:layout_height="60dp"
            android:layout_marginTop="68dp"
            android:backgroundTint="@color/azul_btn_guardar"
            android:fontFamily="@font/noto_sans_bold"
            android:text="@string/inicioUIverRecordatorio"
            android:textAllCaps="false"
            android:textSize="16sp"
            app:cornerRadius="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/digitalClock" />

        <Button
            android:id="@+id/Ui_addRecordatorio"
            android:layout_width="245dp"
            android:layout_height="60dp"
            android:layout_marginTop="60dp"
            android:backgroundTint="@color/azul_btn_guardar"
            android:fontFamily="@font/noto_sans_bold"
            android:text="@string/inicioUIaddRecordatorio"
            android:textAllCaps="false"
            android:textSize="16sp"
            app:cornerRadius="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Ui_verRecordatorio" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>